@@ -4,8 +4,9 @@
   ~default~.
 - When loading hatty, it will now try to pick colors appropriate for
   the color theme of the user.
+- ~hatty-reallocate-hats~ has been renamed to ~hatty-reallocate~.
 - ~hatty-request-reallocation~ has been added.  This function tries to
-  avoid multiple rapid executions of ~hatty-reallocate-hats~.
+  avoid multiple rapid executions of ~hatty-reallocate~.
 - ~hatty-with-hat-reallocate~ has been removed.
 
 * 0.2.2 [2024-09-04 Wed]
